--- a/arch/arm/boot/dts/qcom/msm8937-pm.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-pm.dtsi
@@ -13,19 +13,22 @@
 #include <dt-bindings/msm/pm.h>
 
 &soc {
-	qcom,spm@b012000 {
+	qcom,spm@b1d2000 {
 		compatible = "qcom,spm-v2";
 		#address-cells = <1>;
 		#size-cells = <1>;
-		reg = <0xb012000 0x1000>;
-		qcom,name = "perf-l2";
+		reg = <0xb1d2000 0x1000>;
+		qcom,name = "system-cci";
 		qcom,saw2-ver-reg = <0xfd0>;
 		qcom,saw2-cfg = <0x14>;
-		qcom,saw2-spm-dly= <0x3C11840A>;
+		qcom,saw2-spm-dly= <0x3C102800>;
 		qcom,saw2-spm-ctl = <0xe>;
-		qcom,cpu-vctl-list = <&CPU0 &CPU1 &CPU2 &CPU3>;
+		qcom,cpu-vctl-list = <&CPU0 &CPU1 &CPU2 &CPU3
+				&CPU4 &CPU5 &CPU6 &CPU7>;
 		qcom,vctl-timeout-us = <500>;
 		qcom,vctl-port = <0x0>;
+		qcom,phase-port = <0x1>;
+		qcom,pfm-port = <0x2>;
 	};
 
 	qcom,lpm-levels {
@@ -33,93 +36,231 @@
 		qcom,use-psci;
 		#address-cells = <1>;
 		#size-cells = <0>;
+		clock-names = "l2_clk", "cpu0_clk", "cpu1_clk",
+				"cpu2_clk", "cpu3_clk", "cpu4_clk",
+				"cpu5_clk", "cpu6_clk", "cpu7_clk";
+		clocks = <&clock_cpu clk_cci_clk>,
+			 <&clock_cpu clk_a53_bc_clk>,
+			 <&clock_cpu clk_a53_bc_clk>,
+			 <&clock_cpu clk_a53_bc_clk>,
+			 <&clock_cpu clk_a53_bc_clk>,
+			 <&clock_cpu clk_a53_lc_clk>,
+			 <&clock_cpu clk_a53_lc_clk>,
+			 <&clock_cpu clk_a53_lc_clk>,
+			 <&clock_cpu clk_a53_lc_clk>;
 
-		qcom,pm-cluster@0{
+		qcom,pm-cluster@0 {
 			reg = <0>;
 			#address-cells = <1>;
 			#size-cells = <0>;
-			label = "perf";
-			qcom,spm-device-names = "l2";
+			label = "system";
+			qcom,spm-device-names = "cci";
 			qcom,default-level=<0>;
-			qcom,cpu = <&CPU0 &CPU1 &CPU2 &CPU3>;
-			qcom,psci-mode-shift = <4>;
+			qcom,psci-mode-shift = <8>;
 			qcom,psci-mode-mask = <0xf>;
 
 			qcom,pm-cluster-level@0{
 				reg = <0>;
-				label = "perf-l2-wfi";
-				qcom,psci-mode = <1>;
-				qcom,latency-us = <180>;
-				qcom,ss-power = <429>;
-				qcom,energy-overhead = <162991>;
-				qcom,time-overhead = <305>;
+				label = "system-active";
+				qcom,psci-mode = <0>;
+				qcom,latency-us = <415>;
+				qcom,ss-power = <405>;
+				qcom,energy-overhead = <558549>;
+				qcom,time-overhead = <980>;
 			};
 
 			qcom,pm-cluster-level@1{
 				reg = <1>;
-				label = "perf-l2-gdhs";
-				qcom,psci-mode = <4>;
-				qcom,latency-us = <280>;
-				qcom,ss-power = <421>;
-				qcom,energy-overhead = <257510>;
-				qcom,time-overhead = <520>;
+				label = "system-wfi";
+				qcom,psci-mode = <1>;
+				qcom,latency-us = <475>;
+				qcom,ss-power = <346>;
+				qcom,energy-overhead = <718929>;
+				qcom,time-overhead = <1050>;
 				qcom,min-child-idx = <1>;
-				qcom,reset-level = <LPM_RESET_LVL_GDHS>;
 			};
 
 			qcom,pm-cluster-level@2{
 				reg = <2>;
-				label = "perf-l2-retention";
+				label = "system-ret";
 				qcom,psci-mode = <2>;
-				qcom,latency-us = <650>;
-				qcom,ss-power = <350>;
-				qcom,energy-overhead = <651061>;
-				qcom,time-overhead = <1350>;
+				qcom,latency-us = <900>;
+				qcom,ss-power = <320>;
+				qcom,energy-overhead = <918687>;
+				qcom,time-overhead = <1250>;
 				qcom,min-child-idx = <1>;
 				qcom,reset-level = <LPM_RESET_LVL_RET>;
 			};
 
 			qcom,pm-cluster-level@3{
 				reg = <3>;
-				label = "perf-l2-pc";
-				qcom,psci-mode = <5>;
-				qcom,latency-us = <11200>;
-				qcom,ss-power = <320>;
-				qcom,energy-overhead = <917561>;
-				qcom,time-overhead = <1700>;
-				qcom,min-child-idx = <1>;
-				qcom,is-reset;
+				label = "system-pc";
+				qcom,psci-mode = <3>;
+				qcom,latency-us = <10782>;
+				qcom,ss-power = <306>;
+				qcom,energy-overhead = <1060040>;
+				qcom,time-overhead = <1426>;
+				qcom,min-child-idx = <2>;
 				qcom,notify-rpm;
+				qcom,is-reset;
 				qcom,reset-level = <LPM_RESET_LVL_PC>;
 			};
 
-			qcom,pm-cpu {
+			qcom,pm-cluster@0{
+				reg = <0>;
 				#address-cells = <1>;
 				#size-cells = <0>;
-				qcom,psci-mode-shift = <0>;
+				label = "perf";
+				qcom,spm-device-names = "l2";
+				qcom,default-level=<0>;
+				qcom,cpu = <&CPU0 &CPU1 &CPU2 &CPU3>;
+				qcom,psci-mode-shift = <4>;
 				qcom,psci-mode-mask = <0xf>;
 
-				qcom,pm-cpu-level@0 {
+				qcom,pm-cluster-level@0{
 					reg = <0>;
-					qcom,psci-cpu-mode = <0>;
-					qcom,spm-cpu-mode = "wfi";
-					qcom,latency-us = <12>;
-					qcom,ss-power = <463>;
-					qcom,energy-overhead = <23520>;
-					qcom,time-overhead = <25>;
+					label = "perf-l2-wfi";
+					qcom,psci-mode = <1>;
+					qcom,latency-us = <210>;
+					qcom,ss-power = <472>;
+					qcom,energy-overhead = <233383>;
+					qcom,time-overhead = <326>;
 				};
 
-				qcom,pm-cpu-level@1 {
+				qcom,pm-cluster-level@1{
 					reg = <1>;
-					qcom,psci-cpu-mode = <3>;
-					qcom,spm-cpu-mode = "pc";
-					qcom,latency-us = <180>;
-					qcom,ss-power = <429>;
-					qcom,energy-overhead = <162991>;
-					qcom,time-overhead = <305>;
-					qcom,use-broadcast-timer;
+					label = "perf-l2-gdhs";
+					qcom,psci-mode = <4>;
+					qcom,latency-us = <267>;
+					qcom,ss-power = <435>;
+					qcom,energy-overhead = <388012>;
+					qcom,time-overhead = <627>;
+					qcom,min-child-idx = <1>;
+					qcom,reset-level = <LPM_RESET_LVL_GDHS>;
+				};
+
+				qcom,pm-cluster-level@2{
+					reg = <2>;
+					label = "perf-l2-pc";
+					qcom,psci-mode = <5>;
+					qcom,latency-us = <305>;
+					qcom,ss-power = <405>;
+					qcom,energy-overhead = <564794>;
+					qcom,time-overhead = <879>;
+					qcom,min-child-idx = <1>;
 					qcom,is-reset;
 					qcom,reset-level = <LPM_RESET_LVL_PC>;
+				};
+
+				qcom,pm-cpu {
+					#address-cells = <1>;
+					#size-cells = <0>;
+					qcom,psci-mode-shift = <0>;
+					qcom,psci-mode-mask = <0xf>;
+
+					qcom,pm-cpu-level@0 {
+						reg = <0>;
+						qcom,psci-cpu-mode = <0>;
+						qcom,spm-cpu-mode = "wfi";
+						qcom,latency-us = <1>;
+						qcom,ss-power = <530>;
+						qcom,energy-overhead = <62806>;
+						qcom,time-overhead = <67>;
+					};
+
+					qcom,pm-cpu-level@1 {
+						reg = <1>;
+						qcom,psci-cpu-mode = <3>;
+						qcom,spm-cpu-mode = "pc";
+						qcom,latency-us = <190>;
+						qcom,ss-power = <472>;
+						qcom,energy-overhead = <233383>;
+						qcom,time-overhead = <326>;
+						qcom,use-broadcast-timer;
+						qcom,is-reset;
+						qcom,reset-level =
+							<LPM_RESET_LVL_PC>;
+					};
+				};
+			};
+
+			qcom,pm-cluster@1{
+				reg = <1>;
+				#address-cells = <1>;
+				#size-cells = <0>;
+				label = "pwr";
+				qcom,spm-device-names = "l2";
+				qcom,default-level=<0>;
+				qcom,cpu = <&CPU4 &CPU5 &CPU6 &CPU7>;
+				qcom,psci-mode-shift = <4>;
+				qcom,psci-mode-mask = <0xf>;
+
+				qcom,pm-cluster-level@0{
+					reg = <0>;
+					label = "pwr-l2-wfi";
+					qcom,psci-mode = <1>;
+					qcom,latency-us = <221>;
+					qcom,ss-power = <460>;
+					qcom,energy-overhead = <219499>;
+					qcom,time-overhead = <400>;
+				};
+
+				qcom,pm-cluster-level@1{
+					reg = <1>;
+					label = "pwr-l2-gdhs";
+					qcom,psci-mode = <4>;
+					qcom,latency-us = <337>;
+					qcom,ss-power = <433>;
+					qcom,energy-overhead = <372429>;
+					qcom,time-overhead = <717>;
+					qcom,min-child-idx = <1>;
+					qcom,reset-level =
+						<LPM_RESET_LVL_GDHS>;
+				};
+
+				qcom,pm-cluster-level@2{
+					reg = <2>;
+					label = "pwr-l2-pc";
+					qcom,psci-mode = <5>;
+					qcom,latency-us = <415>;
+					qcom,ss-power = <405>;
+					qcom,energy-overhead = <558549>;
+					qcom,time-overhead = <980>;
+					qcom,min-child-idx = <1>;
+					qcom,is-reset;
+					qcom,reset-level =
+						<LPM_RESET_LVL_PC>;
+				};
+
+				qcom,pm-cpu {
+					#address-cells = <1>;
+					#size-cells = <0>;
+					qcom,psci-mode-shift = <0>;
+					qcom,psci-mode-mask = <0xf>;
+
+					qcom,pm-cpu-level@0 {
+						reg = <0>;
+						qcom,psci-cpu-mode = <0>;
+						qcom,spm-cpu-mode = "wfi";
+						qcom,latency-us = <1>;
+						qcom,ss-power = <540>;
+						qcom,energy-overhead = <93024>;
+						qcom,time-overhead = <57>;
+					};
+
+					qcom,pm-cpu-level@1 {
+						reg = <1>;
+						qcom,psci-cpu-mode = <3>;
+						qcom,spm-cpu-mode = "pc";
+						qcom,latency-us = <221>;
+						qcom,ss-power = <460>;
+						qcom,energy-overhead = <219499>;
+						qcom,time-overhead = <400>;
+						qcom,use-broadcast-timer;
+						qcom,is-reset;
+						qcom,reset-level =
+							<LPM_RESET_LVL_PC>;
+					};
 				};
 			};
 		};
@@ -226,11 +367,16 @@
 			<0xff 207>, /* rpm_ipc(27) */
 			<0xff 215>, /* o_bimc_intr[0] */
 			<0xff 224>, /* SPDM interrupt */
+			<0xff 231>, /* arm-smmu global fault */
 			<0xff 239>, /* crypto_bam_irq[1]*/
 			<0xff 240>, /* summary_irq_kpss */
 			<0xff 253>, /* sdcc_pwr_cmd_irq */
+			<0xff 257>, /* osmmu_CIrpt[0] */
+			<0xff 260>, /* ipa_irq[0] */
+			<0xff 262>, /* ipa_bam_irq[0] */
 			<0xff 269>, /* rpm_wdog_expired_irq */
 			<0xff 270>, /* blsp1_bam_irq[0] */
+			<0xff 271>, /* sps interrupt */
 			<0xff 272>, /* smmu_intr_bus[17] */
 			<0xff 273>, /* smmu_bus_intr[18] */
 			<0xff 274>, /* smmu_bus_intr[19] */
@@ -255,6 +401,8 @@
 			<9  36>,
 			<10  13>,
 			<11  35>,
+			<12  17>,
+			<13  21>,
 			<14  54>,
 			<15  34>,
 			<16  31>,
