--- a/arch/arm/boot/dts/qcom/msm8909-ion.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8909-ion.dtsi
@@ -1,5 +1,4 @@
-/*
- * Copyright (c) 2015-2016, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2014, 2016 Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -22,15 +21,21 @@
 			qcom,ion-heap-type = "SYSTEM";
 		};
 
-		qcom,ion-heap@8 { /* CP_MM HEAP */
-			reg = <8>;
-			memory-region = <&secure_mem>;
-			qcom,ion-heap-type = "SECURE_DMA";
-		};
-
 		qcom,ion-heap@27 { /* QSEECOM HEAP */
 			reg = <27>;
-			memory-region = <&qseecom_mem>;
+			memory-region = <&venus_qseecom_mem>;
+			qcom,ion-heap-type = "DMA";
+		};
+
+		qcom,ion-heap@28 { /* AUDIO HEAP */
+			reg = <28>;
+			memory-region = <&audio_mem>;
+			qcom,ion-heap-type = "DMA";
+		};
+
+		modem_heap: qcom,ion-heap@26 { /* MODEM HEAP */
+			reg = <26>;
+			memory-region = <&modem_adsp_mem>;
 			qcom,ion-heap-type = "DMA";
 		};
 	};
