--- a/arch/arm/boot/dts/qcom/Makefile
+++ b/arch/arm/boot/dts/qcom/Makefile
@@ -266,9 +266,62 @@ dtb-$(CONFIG_ARCH_MSM8953) += msm8953-sim.dtb \
 	msm8953-qrd-sku3.dtb \
 	msm8953-rcm.dtb \
 	msm8953-ext-codec-rcm.dtb \
-	apq8953-cdp.dtb \
-	apq8953-mtp.dtb \
-	msm8953-cdp-1200p.dtb
+	apq8053-cdp.dtb \
+	apq8053-ipc.dtb \
+	msm8953-ipc.dtb \
+	apq8053-mtp.dtb \
+	apq8053-ext-audio-mtp.dtb \
+	apq8053-ext-codec-rcm.dtb \
+	msm8953-cdp-1200p.dtb \
+	msm8953-iot-mtp.dtb \
+	apq8053-iot-mtp.dtb \
+	msm8953-pmi8940-cdp.dtb \
+	msm8953-pmi8940-mtp.dtb \
+	msm8953-pmi8937-cdp.dtb \
+	msm8953-pmi8937-mtp.dtb \
+	msm8953-pmi8940-ext-codec-mtp.dtb \
+	msm8953-pmi8937-ext-codec-mtp.dtb
+endif # CONFIG_MMI_DEVICE_DTBS
+
+dtb-$(CONFIG_ARCH_SDM450) += sdm450-rcm.dtb \
+	sdm450-cdp.dtb \
+	sdm450-mtp.dtb \
+	sdm450-qrd.dtb \
+	sdm450-pmi8940-mtp.dtb \
+	sdm450-pmi8937-mtp.dtb \
+	sdm450-iot-mtp.dtb \
+	sda450-cdp.dtb \
+	sda450-mtp.dtb
+
+ifeq ($(CONFIG_ADDISON_DTB),y)
+dtb-$(CONFIG_ARCH_MSM8953) += msm8953-addison-p1.dtb \
+	msm8953-addison-p2a.dtb \
+	msm8953-addison-p3.dtb \
+	msm8953-addison-p4.dtb \
+	msm8953-addison-p7.dtb
+endif
+
+ifeq ($(CONFIG_POTTER_DTB),y)
+dtb-$(CONFIG_ARCH_MSM8953) += msm8953-potter-p0a.dtb \
+	msm8953-potter-p1a.dtb \
+	msm8953-potter-p1b.dtb \
+	msm8953-potter-p2a.dtb \
+	msm8953-potter-p2a2.dtb \
+	msm8953-potter-p2b.dtb
+endif
+
+ifeq ($(CONFIG_ALBUS_DTB),y)
+dtb-$(CONFIG_ARCH_MSM8953) += msm8953-albus-p0.dtb
+dtb-$(CONFIG_ARCH_MSM8953) += msm8953-albus-p1.dtb
+dtb-$(CONFIG_ARCH_MSM8953) += msm8953-albus-p1a1.dtb
+endif
+
+ifeq ($(CONFIG_CEDRIC_DTB),y)
+dtb-$(CONFIG_ARCH_MSM8937) += msm8937-cedric-p1.dtb \
+	msm8937-cedric-p2.dtb \
+	msm8937-cedric-p3.dtb \
+	msm8937-cedric-p4.dtb
+endif
 
 dtb-$(CONFIG_ARCH_MDM9607) += mdm9607-rumi.dtb \
 	mdm9607-cdp.dtb \
