--- a/arch/arm/boot/dts/qcom/msm8917-regulator.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8917-regulator.dtsi
@@ -428,6 +428,9 @@
 				<3 1248000000>,
 				<4 1401000000>;
 		qcom,speed-bin-fuse-sel = <37 34 3 0>;
+		qcom,cpr-speed-bin-max-corners =
+					<0 (-1) 1 2 4>,
+					<1 (-1) 1 2 5>;
 		qcom,cpr-quot-adjust-scaling-factor-max = <0 1400 1400>;
 		qcom,cpr-fuse-revision = <69 39 3 0>;
 	};
