--- a/arch/arm/boot/dts/qcom/msm8937.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937.dtsi
@@ -69,6 +69,18 @@
 			alignment = <0 0x400000>;
 			size = <0 0x1000000>;
 		};
+
+		adsp_mem: adsp_region@0 {
+			compatible = "removed-dma-pool";
+			reusable;
+			alignment = <0 0x400000>;
+			size = <0 0x400000>;
+		};
+
+		cont_splash_mem: splash_region@83000000 {
+			reg = <0x0 0x90000000 0x0 0x1400000>;
+		};
+
 	};
 
 	aliases {
