--- a/arch/arm64/configs/cedric_defconfig
+++ b/arch/arm64/configs/cedric_defconfig
@@ -1271,6 +1271,7 @@ CONFIG_DROPBOX=y
 # CONFIG_USB3813 is not set
 # CONFIG_FSUSB42_MUX is not set
 # CONFIG_C2PORT is not set
+CONFIG_DTV_FC8180=y
 
 #
 # EEPROM support
