--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -724,6 +724,12 @@ config DTV_FC8300
 	help
 	  Enable/disable FC8300 DTV module support
 
+config DTV_FC8180
+	tristate "FC8180 DTV module support"
+	default n
+	help
+	  Enable/disable FC8180 DTV module support
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
