--- a/arch/arm64/configs/cedric_defconfig
+++ b/arch/arm64/configs/cedric_defconfig
@@ -6,6 +6,7 @@ CONFIG_ARM64=y
 CONFIG_64BIT=y
 CONFIG_ARCH_PHYS_ADDR_T_64BIT=y
 CONFIG_MMU=y
+CONFIG_BUILD_ARM64_DT_OVERLAY=y
 CONFIG_ARCH_MMAP_RND_BITS_MIN=18
 CONFIG_ARCH_MMAP_RND_BITS_MAX=24
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=11
